Default all mobile to lunch for now

--- a/comp20-spring2015-team10/index_m.html
+++ b/comp20-spring2015-team10/index_m.html
@@ -45,11 +45,11 @@
         var d = new Date();
         var n = d.getUTCHours();
         if (n >= 3 && n < 13){
-          window.location.href = "menu_Breakfast.html?location=Dewick";
+          window.location.href = "menu_Lunch_m.html?location=Dewick";
         } else if (n >= 13 && n < 20){
           window.location.href = "menu_Lunch_m.html?location=Dewick";
         } else {
-          window.location.href = "menu_Dinner.html?location=Dewick";
+          window.location.href = "menu_Lunch_m.html?location=Dewick";
         }
       }
     </script>
