Added about and contact pages for Desktop

--- a/comp20-spring2015-team10/menu_Lunch_m.html
+++ b/comp20-spring2015-team10/menu_Lunch_m.html
@@ -27,8 +27,11 @@
         <!-- ratings.js -->
     <script src="js/ratings.js"></script> 
 
-    <!-- Custom Tufts Dining CSS -->
-    <link href="css/menu_m.css" rel="stylesheet">
+    <!-- Mobile menu CSS -->
+    <link href="css/menu_m.css" rel="stylesheet" media="only screen and (max-device-width:667px)">
+
+    <!-- desktop menu css -->
+    <link href="css/menu.css" rel="stylesheet" media="print, screen and (min-device-width: 668px)" />
 
     <!-- Custom styles for this template -->
     <link href="css/justified-nav.css" rel="stylesheet">
@@ -167,12 +170,11 @@
   <body style="padding-top: 0px">
     
     <ul id="menu-nav">
-      <!-- both lists showing up -->
-      <!--<li><a href="index_m.html">Home</a></li>
+      <li><a href="index_m.html">Home</a></li>
       <li><a onclick="goto_menu()">Menu</a></li>
       <li><a href="#">Nutrition</a></li>
       <li><a href="about.html">About</a></li>
-      <li><a href="contact.html">Contact</a></li>-->
+      <li><a href="contact.html">Contact</a></li>
      </ul>
        
       <!-- The justified navigation menu is meant for single line per list item.
