--- a/comp20-spring2015-team10/index.html
+++ b/comp20-spring2015-team10/index.html
@@ -62,8 +62,8 @@
             <li><a href="#">Home</a></li>
             <li><a onclick="goto_menu()">Menu</a></li>
             <li><a href="#">Nutrition</a></li>
-            <li><a href="#">About</a></li>
-            <li><a href="#">Contact</a></li>
+            <li><a href="about.html">About</a></li>
+            <li><a href="contact.html">Contact</a></li>
           </ul>
         </nav>
       </div>
