Some linking of pages, added temporary nutrition page

--- a/comp20-spring2015-team10/about.html
+++ b/comp20-spring2015-team10/about.html
@@ -61,7 +61,7 @@
           <ul class="nav nav-justified">
             <li><a href="index.html">Home</a></li>
             <li><a onclick="goto_menu()">Menu</a></li>
-            <li><a href="#">Nutrition</a></li>
+            <li><a href="nutrition.html">Nutrition</a></li>
             <li><a href="about.html">About</a></li>
             <li><a href="contact.html">Contact</a></li>
           </ul>
