--- a/comp20-spring2015-team10/index.html
+++ b/comp20-spring2015-team10/index.html
@@ -61,7 +61,7 @@
           <ul class="nav nav-justified">
             <li><a href="#">Home</a></li>
             <li><a onclick="goto_menu()">Menu</a></li>
-            <li><a href="#">Nutrition</a></li>
+            <li><a href="nutrition.html">Nutrition</a></li>
             <li><a href="about.html">About</a></li>
             <li><a href="contact.html">Contact</a></li>
           </ul>
@@ -91,7 +91,7 @@
           <p>Welcome to the Tufts Dining Concept website. This website is the prototype for the newly envisioned Tufts
           Dining Website. The goal of this website is to provide information about Tufts University's 
           Dining Halls through an effective and user friendly medium. </p>
-          <p><a class="btn btn-primary" href="#" role="button">Check out the new Menu &raquo;</a></p>
+          <p><a class="btn btn-primary" onclick="goto_menu()" role="button">Check out the new Menu &raquo;</a></p>
         </div>
         <div class="col-lg-4">
           <h2>Features </h2>
@@ -99,13 +99,13 @@
           nutritional content, and information about the dining halls. The website also supports user reviews of
           various food items and can transmit dining hall information over SMS. For a list of offered features, 
           visit the About page. </p>
-          <p><a class="btn btn-primary" href="#" role="button">About &raquo;</a></p>
+          <p><a class="btn btn-primary" href="about.html" role="button">About &raquo;</a></p>
        </div>
         <div class="col-lg-4">
           <h2>About the creators</h2>
           <p>This website was created by Team 10 of COMP20 during Spring 2015 for the Final Semester Project. To meet the creators of
             this website, visit the contact page.</p>
-          <p><a class="btn btn-primary" href="#" role="button">Contact &raquo;</a></p>
+          <p><a class="btn btn-primary" href="contact.html" role="button">Contact &raquo;</a></p>
         </div>
       </div>
 
