--- a/comp20-spring2015-team10/nutrition.html
+++ b/comp20-spring2015-team10/nutrition.html
@@ -22,7 +22,7 @@
     <!-- homepage css -->
     <link href="css/index.css" rel="stylesheet" media="print, screen and (min-device-width: 668px)" />
     <!-- about css -->
-    <link href="css/contact.css" rel="stylesheet" media="print, screen and (min-device-width: 668px)" />
+    <link href="css/about.css" rel="stylesheet" media="print, screen and (min-device-width: 668px)" />
     <!-- Just for debugging purposes. Don't actually copy these 2 lines! -->
     <!--[if lt IE 9]><script src="../../assets/js/ie8-responsive-file-warning.js"></script><![endif]-->
     <script src="../../assets/js/ie-emulation-modes-warning.js"></script>
@@ -67,45 +67,14 @@
           </ul>
         </nav>
       </div>
-
+    
+      
       <div class="row">
-        <div class="col-lg-4">
-          <img src="images/Brian.jpg">
-          <h3 class="name"> Brian Williamson </h3>
-          <p> Brian is a recent graduate of Tufts University, where he studied computer science. 
-              When he is not throwing shotput for the Tufts Track and Field team, Brian can be
-              found reading or designing his next game.  
-          <p> 
-              email: Brian.Williamson@tufts.edu
-              github: https://github.com/gitinthickwitit
-          </p>
-          </p>
-        </div>
-        <div class="col-lg-4">
-          <img src="images/Katie.jpg">
-          <h3 class="name"> Katie Kurtz </h3>  
-          <p> Katie is a rising senior at Tufts University studying computer science. A native of
-            Illinois, Katie participates as a member of the Tufts Track and Field team and 
-            the Tufts Concert Planning Board.  </p>
-          <p> 
-              email: Kathleen.Kurtz@tufts.edu 
-          </p>
-             </div>
-        <div class="col-lg-4">
-          <img src="images/Henry.jpg">
-          <h3 class="name"> Henry Zhou </h3>
-          <p> Henry is currently a rising junior at Tufts studing computer science through the
-              School of Engineering. Henry was responsible for much of the designing of UI and features
-              for the Tufts Dining Concept. Aside from web development, Henry also hurdles for the Tufts
-              Track team. Henry is also an experienced educator, and is passionate about moving 
-              educational technology forward.</p>
-          <p> 
-              email: Henry.Zhou@tufts.edu
-              github: https://github.com/ehnree  
-          </p>
-        </div>
+      	<div class="col-lg-10">
+      		</br> </br>
+        	Coming Soon...
+      	</div>
       </div>
-
 
       <!-- Site footer -->
       <footer class="footer">
