--- a/comp20-spring2015-team10/about.html
+++ b/comp20-spring2015-team10/about.html
@@ -77,7 +77,7 @@
       <div class="row">
       	<div class="col-lg-4">
       		</br> </br>
-        	<img src="images/twilioex.png">
+        	<img src="images/twilioexy.png">
       	</div>
 		<div class="col-lg-6">
       		</br> </br>
